--- a/package.json
+++ b/package.json
@@ -2,7 +2,37 @@
   "name": "js",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
+  "scripts": {
+    "test": "ava"
+  },
   "dependencies": {
     "jquery": "^3.6.0"
+  },
+  "devDependencies": {
+    "@ava/babel": "^2.0.0",
+    "@babel/preset-env": "^7.14.8",
+    "@babel/register": "^7.14.5",
+    "ava": "^3.15.0",
+    "browser-env": "^3.3.0",
+    "chance": "^1.1.7",
+    "sinon": "^11.1.2"
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/env",
+        {
+          "modules": false
+        }
+      ]
+    ]
+  },
+  "ava": {
+    "babel": true,
+    "require": [
+      "@babel/register",
+      "./test/helper/setup-browser-env.js"
+    ]
   }
 }
